--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -95,8 +95,9 @@ main ul li a {
 }
 
 .middle {
-  width: 1190px;
+  max-width: 1190px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .center {
@@ -114,12 +115,8 @@ main ul li a {
 .about-us p {
   margin: 0 0 1em 0;
 }
-
-.about-us > div {
-  width: 50%;
-}
-.about-us > img {
-  max-width: 40%;
+.about-us img {
+  display: none;
 }
 
 .our-values {
@@ -127,6 +124,8 @@ main ul li a {
   justify-content: space-between;
   align-items: flex-start;
   align-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: column;
   padding: 0;
   border: 0;
   margin: 1em 0;
@@ -189,10 +188,11 @@ main ul li a {
   justify-content: space-between;
   align-items: stretch;
   align-content: flex-start;
+  flex-direction: column;
   padding: 0;
   border: 0;
   margin: 1em auto;
-  max-width: 1000px;
+  max-width: 1190px;
 }
 
 .plans > div {
@@ -206,7 +206,7 @@ main ul li a {
   box-shadow: 0 8px 24px rgba(149,157,165,.2) !important;
   background-color: #fff;
   padding: 1em;
-  margin: 0 0.4em;
+  margin: 0.6em 0.4em;
   flex-grow: 1;
   display: flex !important;
   justify-content: space-between !important;
@@ -333,4 +333,28 @@ div.form_contact form button:hover {
   -webkit-transition: all .3s;
   -o-transition: all .3s;
   transition: all .3s;
+}
+
+@media only screen and (min-width: 700px) {
+
+.middle {
+  padding: 0;
+}
+
+.about-us > div {
+  width: 50%;
+}
+.about-us > img {
+  max-width: 40%;
+}
+
+.our-values {
+  flex-direction: row;
+}
+
+
+.plans {
+  flex-direction: row;
+}
+
 }
