--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -25,7 +25,6 @@ footer a.hover {
 }
 
 footer > section {
-  width: 1246px;
   padding: 1em;
   margin: 0 auto;
 }
@@ -40,6 +39,7 @@ footer section.newsletter {
   justify-content: center;
   align-items:center;
   align-content: center;
+  flex-direction: column;
 }
 footer section.newsletter svg {
   height: 45px;
@@ -62,6 +62,7 @@ footer section.newsletter input[type="text"] {
   padding: 0px 25px;
   font-size: 16px;
   color: #ffffff;
+  margin: 0.6em 0 0.4em;
 }
 
 footer section.newsletter form button {
@@ -78,7 +79,8 @@ footer section.newsletter form button {
   -o-transition: all .3s;
   transition: all .3s;
   font-weight: bold;
-  margin: 0 0 0 0.4em
+  margin: 0 0 0 0.4em;
+  margin: 0.6em 0 0.4em;
 }
 footer section.newsletter form button:hover {
   background: #50f;
@@ -86,7 +88,7 @@ footer section.newsletter form button:hover {
   color: #ffffff;
   -webkit-transition: all .3s;
   -o-transition: all .3s;
-  transition: all .3s
+  transition: all .3s;
 }
 footer section.newsletter form button:hover {
     border: 2px solid #ffffff
@@ -94,6 +96,7 @@ footer section.newsletter form button:hover {
 
 footer section.copy {
   border-top: 1px solid #ccc;
+  max-width: 1190px;
 
   display: flex;
   justify-content: center;
@@ -104,4 +107,19 @@ footer section.copy {
 
 footer h2 {
   color: #fff;
+}
+
+@media only screen and (min-width: 700px) {
+
+footer section.newsletter {
+  flex-direction: row;
+}
+
+footer section.newsletter input[type="text"] {
+  margin: 0;
+}
+footer section.newsletter form button {
+  margin: 0 0 0 0.4em;
+}
+
 }
