--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -5,7 +5,7 @@ div.modules {
   flex-wrap: wrap;
   align-items:center;
   align-items: stretch;
-  width: 900px;
+  max-width: 900px;
   margin: 1.6em auto;
 }
 
