--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 		</div>
 		<div>
 			<ul>
-				<li><a class="login" href="#">Login</a></li>
+				<li><a class="login" href="https://app.phguardian.com">Login</a></li>
 				<li><a class="cta" href="/contato">Contrate aqui</a></li>
 			</ul>
 		</div>
