--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 				<li><a class="menuitem" href="/quem-somos">Quem somos</a></li>
 				<li><a class="menuitem" href="/planos-precos">Planos e Preços</a></li>
 				<li><a class="menuitem" href="/ccih">CCIH</a></li>
-				<li><a class="menuitem" href="/consultoria">Consultoria</a></li>
+				<li><a class="menuitem" href="/assessoria">Assessoria</a></li>
 				<li><a class="menuitem" href="/blog">Blog</a></li>
 			</ul>
 		</div>
