fix contact form

--- a/_includes/home-contact.html
+++ b/_includes/home-contact.html
@@ -6,7 +6,10 @@
         Preencha uma solicitação de contato.
     </p>
 
-    <form action="">
+    <form accept-charset="UTF-8" action="https://formsubmit.io/send/d0f13677-743a-4192-a429-2e2ad4725784" method="POST">
+        <input type="hidden" name="page" value="contato site">
+		<input name="_redirect" type="hidden" value="/mensagem-enviada">
+		<input name="_formsubmit_id" type="text" style="display:none">
         <div>
             <label for="">Nome do hospital/clínica</label>
             <input type="text" name="hospital_name" />
