change color home icons

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -16,11 +16,12 @@ div.modules > div {
 }
 
 div.modules svg {
-  color: $dark-header-color;
+  color: #1d2e49;
   height: 60px;
   margin: 0 0 1em 0;
 }
 div.modules img {
+  color: #1d2e49;
   height: 60px;
   margin: 0 0 1em 0;
 }
