--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -15,12 +15,7 @@ div.modules > div {
   width: 300px;
 }
 
-div.modules svg {
-  color: #1d2e49;
-  height: 60px;
-  margin: 0 0 1em 0;
-}
-div.modules img {
+div.modules .modules_icon {
   color: #1d2e49;
   height: 60px;
   margin: 0 0 1em 0;
