--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -20,6 +20,11 @@ div.modules svg {
   height: 60px;
   margin: 0 0 1em 0;
 }
+div.modules img {
+  color: #1d2e49;
+  height: 60px;
+  margin: 0 0 1em 0;
+}
 
 h2.home {
   padding-top: 2em;
